policies/deny-root-containers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-root-containers
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  validationFailureAction: Enforce
  rules:
    - name: deny-privileged
      match:
        any:
        - resources:
            kinds:
              - Pod
            namespaces:
              - default
      validate:
        message: "Privileged containers are not allowed"
        pattern:
          spec:
            containers:
            - =(securityContext):
                =(privileged): false
